[gd_scene load_steps=3 format=3 uid="uid://b8hqt3kn3abc2"]

[ext_resource type="Script" path="res://src/UI/Dialog Settings/Scripts/Dialog Availability.gd" id="1"]

[sub_resource type="StyleBoxEmpty" id="1"]

[node name="DialogAvailability" type="Control"]
custom_minimum_size = Vector2(435, 50)
layout_mode = 3
anchors_preset = 0
offset_right = 435.0
offset_bottom = 50.0
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(350, 50)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("1")

[node name="ChooseDialog" type="Button" parent="Panel"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.5
offset_top = -9.0
offset_right = 71.5
offset_bottom = 10.0
disabled = true
text = "SELECT_DIALOG"
clip_text = true

[node name="OptionButton" type="OptionButton" parent="Panel"]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -9.0
offset_right = 128.0
offset_bottom = 11.0
alignment = 1
item_count = 3
popup/item_0/text = "AV_ALWAYS"
popup/item_0/id = 0
popup/item_1/text = "AV_AFTER"
popup/item_1/id = 2
popup/item_2/text = "AV_BEFORE"
popup/item_2/id = 1

[node name="SpinBox" type="SpinBox" parent="Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -123.0
offset_top = -10.0
offset_right = -39.9375
offset_bottom = 21.0
grow_horizontal = 0
grow_vertical = 2
min_value = -1.0
max_value = 100000.0
value = -1.0
prefix = "ID"

[connection signal="pressed" from="Panel/ChooseDialog" to="." method="_on_ChooseDialog_pressed"]
[connection signal="item_selected" from="Panel/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="value_changed" from="Panel/SpinBox" to="." method="_on_SpinBox_value_changed"]
